--- a/Styles/Style.css
+++ b/Styles/Style.css
@@ -1,75 +1,62 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 body {
-    width: 100%;
     margin: 0;
     padding: 0;
     background: #fdfdfd;
+    font-family: 'Poppins', sans-serif;
 }
 
 .conteneur {
-    width: 1285px;
+    max-width: 1285px;
     margin: auto;
+    padding: 20px;
 }
 
-/* Image en haut */
 .header {
     text-align: center;
     margin-bottom: 30px;
 }
 
 .header-image {
-    max-width: 300px; /* Ajuster la taille */
+    max-width: 300px;
     height: auto;
-    display: block;
-    margin: 0 auto;
-    border-radius: 10px; /* Optionnel : coins arrondis */
+    border-radius: 10px;
 }
 
 .cbp-rfgrid {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
     padding: 0;
     list-style: none;
-    position: relative;
-    width: 100%;
-    margin: auto;
-    font-family: 'Poppins', sans-serif;
 }
 
 .cbp-rfgrid li {
     position: relative;
-    float: left;
-    overflow: hidden;
-    width: 300px;
-    padding: 10px;
+    width: 250px;
 }
 
-.cbp-rfgrid li a,
-.cbp-rfgrid li a img {
+.cbp-rfgrid li a {
     display: block;
-    width: 100%;
-    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    color: inherit;
 }
 
 .cbp-rfgrid li a img {
-    max-width: 100%;
-}
-
-.poste {
-    text-transform: initial;
-    font-size: 15px;
-    letter-spacing: 2px;
+    width: 100%;
+    border-radius: 10px;
 }
 
 .cbp-rfgrid li a div {
     position: absolute;
-    left: 20px;
-    top: 20px;
-    right: 20px;
-    bottom: 20px;
-    background: rgb(0 0 0 / 31%);
+    inset: 20px;
+    background: rgba(0, 0, 0, 0.4);
     display: flex;
     align-items: center;
-    text-align: center;
+    justify-content: center;
     opacity: 0;
+    transition: opacity 0.3s;
 }
 
 .cbp-rfgrid li a:hover div {
@@ -77,67 +64,33 @@ body {
 }
 
 .cbp-rfgrid li a div h3 {
-    width: 100%;
     color: #fff;
     text-transform: uppercase;
-    font-size: 1.4em;
-    letter-spacing: 2px;
-    padding: 0 10px;
+    font-size: 1.2em;
 }
 
-.coryR {
-    text-align: center;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    font-size: 15px;
-    color: #333;
-    padding: 20px;
-    font-family: 'Poppins', sans-serif;
-}
-
-@media screen and (max-width: 1285px) {
-    .conteneur {
-        width: 962px;
-    }
+.poste {
+    font-size: 14px;
 }
 
 @media screen and (max-width: 970px) {
     .conteneur {
-        width: 640px;
+        max-width: 640px;
+    }
+    .cbp-rfgrid li {
+        width: 200px;
     }
 }
 
 @media screen and (max-width: 640px) {
     .conteneur {
-        width: 290px;
+        max-width: 290px;
     }
-
+    .cbp-rfgrid {
+        flex-direction: column;
+        align-items: center;
+    }
     .cbp-rfgrid li {
-        width: 135px;
-        padding: 5px;
-    }
-
-    .cbp-rfgrid li a div h3 {
-        font-size: 15px;
-    }
-
-    .coryR {
-        margin-top: 30px;
-        margin-bottom: 30px;
-        font-size: 12px;
-        padding: 15px;
-    }
-
-    .poste {
-        font-size: 10px;
-        line-height: 15px;
-        letter-spacing: normal;
-    }
-
-    .cbp-rfgrid li a div {
-        left: 5px;
-        top: 5px;
-        right: 5px;
-        bottom: 5px;
+        width: 100%;
     }
 }
